# crab-router

./: CLAUDE.md  Cargo.toml  README.org  docker-compose.yml
monitoring/grafana/dashboards/: crab-router-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
src/: config.rs  db.rs  discovery.rs  main.rs  manager.rs  metrics.rs
src/p2p/: message.rs  mod.rs  peer.rs
talks/rust-cz-crab-router/: main.typ  speaker-notes.org
tools/lsb-stego-demo/: Cargo.toml  README.md
tools/lsb-stego-demo/src/: main.rs
